--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.3.4"
+    "hubot-slack": "^4.3.4",
+    "querystring": "^0.2.0",
+    "request": "^2.81.0"
   },
   "engines": {
     "node": "0.10.x"
