fix example env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-source HUBOT_URL=http://localhost:8080
+export HUBOT_URL=http://localhost:8080
 export HUBOT_SLACK_TOKEN=123456789
 export HUBOT_HEROKU_KEEPALIVE_URL=https://localhost:8080/
 
