--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ export HUBOT_HEROKU_KEEPALIVE_URL=https://localhost:8080/
 
 export SPOTIFY_CLIENT_ID=123456789
 export SPOTIFY_CLIENT_SECRET=123456789
+
+export UPTIMEROBOT_API_KEY=123456789
