--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,18 @@
+# the base URL for Hubot
 export HUBOT_URL=http://localhost:8080
+
+# Slack to token for adapter
 export HUBOT_SLACK_TOKEN=123456789
+
+# Heroku keep alive url
 export HUBOT_HEROKU_KEEPALIVE_URL=https://localhost:8080/
 
+# Spotify app credentials
 export SPOTIFY_CLIENT_ID=123456789
 export SPOTIFY_CLIENT_SECRET=123456789
 
+# Uptime robot api key for monitoring
 export UPTIMEROBOT_API_KEY=123456789
+
+# netlify access token for deploys
+export NETLIFY_ACCESS_TOKEN=123456789
